fixed double scrollbars with overflow:hidden

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
   min-height: 100vh;
 }
 
@@ -34,6 +35,7 @@
 .contactLinks{
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   padding: 1rem;
 }
 .contactLinks:hover{
